# sdl-hello-world

./: .gitignore  CMakeLists.txt  README.md
assets/: abegail.asset.7z  env-sounds.asset.7z  font-encode-sans.asset.7z  font-open-sans.asset.7z  parallax-menu.asset.7z
assets/translation-en-ph.asset/: default.meta.cfg  translation.cfg
docs/: misc.md
src/: G00_app.h  G00_asset.c  G00_asset.h  G00_command.c  G00_command.h  G00_commands.c  G00_commands.h  G00_config.c  G00_config.h  G00_database.c  G00_database.h  G00_memory.c  G00_memory.h  G00_ui.c  G00_ui.h  G00_video.c  G00_video.h  default.app.cfg  default.cfg  default.menu.cfg  main.c  schema.sql
src/commands/: G00_global.c  G00_memory.c  G00_ui.c  G00_video.c
